Related to ISSUE-53971: Reverts proc:full flag in compiler argument
This reverts commit 101e14051c3e4b30e354085f0593feb5bb84c41b, reversing
changes made to d02e72d511f5057314b341bb1bab9effc4796840.